--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <p class="hashtag">#DesarrolloWebCompleto</p>
     </div>
 
-
+    <script src="js/scripts.js"></script>
 </body>
 </html>
